[package]
name = "tikv-raw"
version = "0.1.0"
authors = ["superLish <s_lisheng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.0"
tikv-client = { git = "https://github.com/tikv/client-rust.git" }
tokio = { version = "0.2", features = ["full"] }